# trabalhosCG

./: .gitignore  CMakeLists.txt  Circle.h  Color.h  Edge.h  HalfEdge.h  Item.h  LineStrip.h  Point.h  Polygon.h  Screen.h  Vector.h  main.cpp
